# yggdrasil

./: .flake8  .pylintrc  README.md  demo.py  demo2.py  demo_MD.py  demo_html_report.py  output.html  pyproject.toml  report.html  requirements.txt  sandbox-1.ipynb  setup.py
test/earth/: test_ellipsoid_model.py  test_gravity.py
test/geography/: __init__.py  test_geographicposition.py  test_position.py  test_rotation_matrix.py  test_transformation.py
test/math/: test_matrix.py  test_rotation_matrix.py  test_vector.py
test/orbital_mechanic/: test_gravity.py
test/utils/argument_validation/: test_files.py  test_int.py  test_numpy_array.py  test_numpy_matrix.py  test_numpy_vector.py
test/utils/files/: test_File.py  test_md5.py  test_sha256.py
test/validation/: test_files.py  test_int.py
yggdrasil/: __init__.py  constants.py  types.py
yggdrasil/earth/: __init__.py  constants.py  earth_ellipsoid_model.py  earth_model.py  gravity.py
yggdrasil/geography/: __init__.py  geographic_position.py  position.py  rotation_matrix.py  transformation.py
yggdrasil/html/: base.py  document.py  fake_report.py  tag.py
yggdrasil/html/components/: __attributesUtils.py  __childrenUtils.py  __extrafiles.py  __init__.py  __validate_attributes.py  _blocks.py  article.py  breakline.py  button.py  division.py  generic_html_tag.py  (+16 more)
yggdrasil/markdown/: __init__.py  document.py  fake_report.py
yggdrasil/math/: __init__.py  matrix.py  rotation_matrix.py  vector.py
yggdrasil/orbital_mechanic/: __init__.py  gravity.py
yggdrasil/validation/: __init__.py  fileIO.py  files.py  int.py
(+53 files in other folders)
