[tool.poetry]
name = "yggdrasil"
version = "0.1.0"
description = "Collection of tools to manage GNC analysis for aerospace systems based on Python"
authors = ["Antoine Barré <antoine.barre@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.4"
pytest = "^8.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
