[tool.poetry]
name = "yggdrasil"
version = "0.1.0"
description = "Collection of tools to manage GNC analysis for aerospace systems based on Python"
authors = ["Antoine Barré <antoine.barre@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.4"
pytest = "^8.0.2"
pip = "^24.0"
install = "^1.3.5"
beautifulsoup4 = "^4.12.3"
attrs = "^23.2.0"
mypy = "^1.8.0"
flake8 = "^7.0.0"
beartype = "^0.17.2"
pillow = "^10.2.0"
matplotlib = "^3.8.4"
scipy = "^1.13.1"
pydantic = "^2.7.4"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
